--- a/SAICVolkswagenVehicleManagement.Api/Properties/launchSettings.json
+++ b/SAICVolkswagenVehicleManagement.Api/Properties/launchSettings.json
@@ -20,8 +20,8 @@
     "SAICVolkswagenVehicleManagement.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5000",
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:50386",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
