--- a/SAICVolkswagenVehicleManagement.Api/SAICVolkswagenVehicleManagement.Api.csproj
+++ b/SAICVolkswagenVehicleManagement.Api/SAICVolkswagenVehicleManagement.Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>Z:\SAICVolkswagenVehicleManagement\SAICVolkswagenVehicleManagement\SAICVolkswagenVehicleManagement.Api\SAICVolkswagenVehicleManagement.Api.xml</DocumentationFile>
+    <DocumentationFile>D:\SAICVolkswagenVehicleManagement\SAICVolkswagenVehicleManagement\SAICVolkswagenVehicleManagement.Api\SAICVolkswagenVehicleManagement.Api.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
